# AI-Powered-Interview-Coach

./: .env_example  .gitignore  Dockerfile  README.md  app.py  ats_checker.py  inference.py  pyproject.toml  requirements.txt
interview_coach_models/: __init__.py  agent_checkpoint.json  ml_answer_grader.py
models/: agent_checkpoint.json
rl_interview_coach/graders/: answer_grader.py
server/: app.py
static/: app.js  styles.css
templates/: index.html
